--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ test {
     systemProperty "java.library.path", file("..\\lib")
     exclude "TSK/**"
     exclude "ch/hsr/maloney/storage/es/**"
+    exclude "ch/hsr/maloney/storage/hash/**"
 }
 
 // Adding ant build commands and prefixing them with 'tsk-'
