Import Hash Set as Job
Added a job and test to import hashes. Performance is not as great as expected, but hey, we don't need to unzip the files.  :stuck_out_tongue_winking_eye:

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ test {
     exclude "TSK/**"
     exclude "ch/hsr/maloney/storage/es/**"
     exclude "ch/hsr/maloney/storage/hash/**"
+    exclude "ch/hsr/maloney/processing/ImportRdsHashSetJobTest*"
 }
 
 // Adding ant build commands and prefixing them with 'tsk-'
