--- a/maloney-cli/build.gradle
+++ b/maloney-cli/build.gradle
@@ -19,6 +19,10 @@ repositories {
 
 dependencies {
     compile project(':maloney')
+    // https://mvnrepository.com/artifact/commons-cli/commons-cli
+    compile group: 'commons-cli', name: 'commons-cli', version: '1.3.1'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.7'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.7'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
