Enable Debug Support
Some code was reactivated to allow debugging using the CLI.

--- a/maloney-cli/build.gradle
+++ b/maloney-cli/build.gradle
@@ -59,3 +59,9 @@ startScripts {
         unixScript.text = unixScriptLines.join('\n')
     }
 }
+
+run {
+    if (project.hasProperty("appArgs")) {
+        args Eval.me(appArgs)
+    }
+}
