--- a/maloney-plugins/build.gradle
+++ b/maloney-plugins/build.gradle
@@ -11,7 +11,7 @@ repositories {
 }
 
 dependencies {
-    compile project(project.parent.path)
+    compile project(':maloney')
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.7'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.7'
     testCompile group: 'junit', name: 'junit', version: '4.11'
