--- a/maloney-cli/build.gradle
+++ b/maloney-cli/build.gradle
@@ -19,6 +19,7 @@ repositories {
 
 dependencies {
     compile project(':maloney')
+    runtime project(':maloney-plugins')
     // https://mvnrepository.com/artifact/commons-cli/commons-cli
     compile group: 'commons-cli', name: 'commons-cli', version: '1.3.1'
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.7'
