--- a/maloney/build.gradle
+++ b/maloney/build.gradle
@@ -20,7 +20,8 @@ dependencies {
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.7'
     compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.8.11.2'
     compile group: 'com.mchange', name: 'c3p0', version: '0.9.5.2'
-    compile group: 'com.squareup.tape2', name: 'tape', version: '2.0.0-SNAPSHOT'
+    compile group: 'org.mapdb', name: 'mapdb', version: '3.0.3'
+
 }
 
 test {
