--- a/maloney/build.gradle
+++ b/maloney/build.gradle
@@ -13,6 +13,7 @@ dependencies {
         builtBy 'tsk-dist-SQLite' // Automatically build TSK first
     }
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile group: 'commons-io', name: 'commons-io', version: '2.5'
 
     compile group: 'org.elasticsearch.client', name: 'transport', version: '5.0.2'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.4'
