--- a/maloney-plugins/build.gradle
+++ b/maloney-plugins/build.gradle
@@ -6,4 +6,5 @@ dependencies {
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.7'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.7'
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile project(':maloney').sourceSets.test.output
 }
