--- a/maloney-plugins/build.gradle
+++ b/maloney-plugins/build.gradle
@@ -3,6 +3,7 @@ version '1.0-SNAPSHOT'
 
 dependencies {
     compile project(':maloney')
+    compile files('../jsign/target/jsign-1.3-SNAPSHOT.jar')
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.7'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.7'
     testCompile group: 'junit', name: 'junit', version: '4.11'
