--- a/maloney-plugins/build.gradle
+++ b/maloney-plugins/build.gradle
@@ -6,6 +6,7 @@ dependencies {
     compile files('../jsign/target/jsign-1.3-SNAPSHOT.jar')
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.7'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.7'
+    compile group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.53'
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile project(':maloney').sourceSets.test.output
 }
