Exclude Elasticsearch Dependend Test
Found correct Pattern :smirk:

--- a/maloney-plugins/build.gradle
+++ b/maloney-plugins/build.gradle
@@ -16,5 +16,5 @@ dependencies {
 test {
     systemProperty "java.library.path", file("..\\lib")
     exclude "TSK/**"
-    exclude "ch/hsr/maloney/maloney_plugins/authenticode/ElasticSignatureStoreTest/**"
+    exclude "ch/hsr/maloney/maloney_plugins/authenticode/ElasticSignatureStoreTest*"
 }
